--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,10 @@ steps:
   inputs:
     SonarQube: 'sonarqubeconn'
     scannerMode: 'CLI'
-    configMode: 'file'
+    configMode: 'manual'
+    cliProjectKey: 'CICDDemoProject'
+    cliProjectName: 'CICDDemoProject'
+    cliSources: '.'
     extraProperties: |
       # Additional properties that will be passed to the scanner, 
       # Put one key=value per line, example:
