--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,12 +37,31 @@ steps:
 - task: ArchiveFiles@2
   displayName: 'Archive files'
   inputs:
-    rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
-    includeRootFolder: false
-
+    rootFolderOrFile: '$(Build.BinariesDirectory)'
+    includeRootFolder: true
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    replaceExistingArchive: true
 - task: PublishBuildArtifacts@1
   displayName: 'Publish artifacts: drop'
   
+- task: ArtifactoryGenericUpload@2
+  inputs:
+    artifactoryService: 'jFrogConn'
+    specSource: 'taskConfiguration'
+    fileSpec: |
+      {
+        "files": [
+          {
+            "pattern": "$(System.DefaultWorkingDirectory)/*",
+            "target": "example-repo-local/$(Build.BuildId)"
+          }
+        ]
+      }
+    failNoOp: true
+    symlinks: true
+
+
 
 
 
