--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,14 +35,18 @@ steps:
   inputs:
     pollingTimeoutSec: '300'
 
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(System.DefaultWorkingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
+
 - task: ArchiveFiles@2
   displayName: 'Archive files'
   inputs:
     rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
     includeRootFolder: false
 
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish artifacts: drop'
 
 - task: ArtifactoryGenericUpload@2
   inputs:
