--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,10 +42,12 @@ steps:
     publishLocation: 'Container'
 
 - task: ArchiveFiles@2
-  displayName: 'Archive files'
   inputs:
     rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
-    includeRootFolder: true
+    includeRootFolder: false
+    archiveType: 'zip'
+    archiveFile: '$(System.DefaultWorkingDirectory)/$(Build.BuildId).zip'
+    replaceExistingArchive: true
 
 
 - task: ArtifactoryGenericUpload@2
